@@ -10,12 +10,13 @@
 * Add new streaming APIs to PointValueDao
 * Add new AggregateDao interface for calculating and querying statistics rollups (aggregates)
 * Replace entire code-path between REST API and time series database to leverage AggregateDao streaming methods and enable support for pre-aggregating time-series databases
+* Fix bug that occurs when attempting to validate any script on a non-running Script data source, causing it will get into a state where it cannot be re-validated or started
+* Added DataSource lifecycle hooks for initializing and terminated
 
 *Version 4.3.3*
 * Upgrade library version to jssc 2.9.4
 * Upgrade Jackson library version to 2.13.1
 * Upgrade MySQL java connector library version to 8.0.27
-* Fix bug that occurs when attempting to validate any script on a non-running Script data source, causing it will get into a state where it cannot be re-validated or started
 
 *Version 4.3.2*
 * Fixing a bug in the upgrading process coming from a legacy version (3.5.x) related to the permissions on the Email Event Handlers  
